use login method

--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,8 @@
 # just a flag
 ENV = 'development'
 
-# base api
+# base api - use proxy in development
 VUE_APP_BASE_API = '/dev-api'
 
-
-# 调接口获取用户信息
-# 开发环境
-# VUE_APP_BASE_API = 'http://localhost:8080'  # 你的后端地址
+# Backend API URL (for reference)
+# The actual backend is at http://localhost:9702
