--- a/.env.production
+++ b/.env.production
@@ -1,6 +1,7 @@
 # just a flag
 ENV = 'production'
 
-# base api
-VUE_APP_BASE_API = '/prod-api'
+# base api - use full backend URL in production
+# TODO: Replace with your production backend URL
+VUE_APP_BASE_API = 'https://trace-api.blockcool.xyz/api'
 
