fix production api define

--- a/.env.production
+++ b/.env.production
@@ -3,5 +3,5 @@ ENV = 'production'
 
 # base api - use full backend URL in production
 # TODO: Replace with your production backend URL
-VUE_APP_BASE_API = 'https://trace-api.blockcool.xyz/api'
+VUE_APP_BASE_API = 'https://trace-api.blockcool.xyz'
 
