--- a/.env.development
+++ b/.env.development
@@ -2,7 +2,7 @@
 ENV = 'development'
 
 # base api - use proxy in development
-VUE_APP_BASE_API = 'https://dev.xiangtaihou-food.com/traceability-code-service/admin'
+VUE_APP_BASE_API = 'https://h5.xiangtaihou-food.com/traceability-code-service/admin'
 
 # Backend API URL (for reference)
 # The actual backend is at http://localhost:9702
